--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,50 @@
 #disqus-thread {
+  font-family: 'PingFang SC', 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Helvetica Neue', 'Helvetica', 'STHeitiSC-Light';
+  font-weight: 300;
   margin: 0;
   padding: 0;
   width: 100%;
   background: #fff; 
   list-style: none;
+
+  * {
+    box-sizing: border-box;
+  }
+
+  .avatar {
+    width: 60px;
+    height: 60px;
+    border-radius: 10px;
+    margin-right: 15px;
+    vertical-align: middle;
+  }
+
+  .disqus-header ul {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    list-style: none;
+    border-bottom: 1px solid #d4d4d4;
+
+    li {
+      padding: 15px; 
+      font-weight: 700;
+
+      &:first-child {
+        border-bottom: 1px solid #1977ca;
+        margin-bottom: -1px;
+      }
+
+      a {
+        text-decoration: none; 
+        color: #7f919e;
+
+        &:hover {
+          color: #2a2e2e; 
+        }
+      }
+    }
+  }
 
   .disqus-list {
     list-style: none;
@@ -14,6 +55,7 @@
   .disqus-comment {
     overflow: auto;
     padding: 10px;
+    display: flex;
 
     .username {
       font-weight: 700;
@@ -21,17 +63,28 @@
       color: rgb(56, 183, 234);
     }
 
-    .avatar {
-      width: 48px;
-      height: 48px;
-      float: left;
-      margin-right: 15px;
-      vertical-align: middle;
-    }
-
     .date {
       color: #7f919e;
       font-weight: 500;
+    }
+
+    &.disqus-response {
+      margin-left: 75px; 
+    }
+
+    .disqus-comment-control {
+      margin: 0;
+      padding: 0;
+      list-style: none;
+      color: #7f919e;
+
+      li {
+        cursor: pointer;
+
+        &:hover {
+          color: #2a2e2e;
+        }
+      }
     }
   }
 
@@ -39,8 +92,17 @@
     margin-top: 30px;
     padding: 10px;
 
+    .comment-group {
+      display: flex;
+      align-items: top;
+    }
+
     .form-group {
       margin-bottom: 15px;
+
+      &.comment-group {
+        margin-bottom: 30px; 
+      }
 
       label {
         font-weight: 300;
@@ -52,6 +114,10 @@
         border-radius: 4px;
         border: 1px solid #d4d4d4;
         width: 284px;
+      }
+
+      #disqus-comment {
+        width: 100%; 
       }
     }
 
@@ -66,6 +132,11 @@
       font-size: 1em;
       outline: none;
     }
+  }
+
+  .disqus-notice {
+    color: #7f919e;
+    font-size: .9em;
   }
 }
 
