--- a/src/style.css
+++ b/src/style.css
@@ -12,7 +12,7 @@
   }
 
   .avatar {
-    width: 60px;
+    min-width: 60px;
     height: 60px;
     border-radius: 10px;
     margin-right: 15px;
@@ -85,6 +85,12 @@
           color: #2a2e2e;
         }
       }
+    }
+
+    .content {
+      img {
+        max-width: 100%; 
+      } 
     }
   }
 
